04 Nov, 2018
fix: ajax timeout
update: improve ajax render times
update: ajax scripts for uniformity
update: remove some unused site_config settings
update: remove some unuses ann_config settings
remove: public/install/extra/ann_config.phpsample.php as not needed

03 Nov, 2018
fix: set/delete run cache images_update.php
remove IE, announcement blocks
fix: url_proxy trying to proxy 'N/A' 
update: ignored files
remove: everything paypal
update: no longer set poster, if empty, poster is strictly for user to set or not
update: move descr formatting to ajax, if not already cached, improves page load time
update: wiki breadcrumbs
update: add previous/next links to torrent details page
update: set torrents.imdb_id in takeupload.php
add: left/right angle font awesome
remove: banner and background from torrents table
add: get images from images table as needed
update: show subtitles in details.php
remove: banner overlay
fix: use user poster in imdb block
add: get_torrent_count() Torrent.php
add: click to IMDb on title imdb block
fix: remove table backups older than 6 hours
fix: update tvmaze
fix: update on/off cleanup item

02 Nox, 2018
fix: viewnfo breadcrumbs

01 Nov, 2018
fix: missing name in form new_topic.php
fix: breadcrumbs when action is page
move: ratio_free, crazy_hour and happy_hour to define.php

31 Oct, 2018
add: view log files with extension '1' log_viewer.php
fix: error when there are topics but no posts view_forum.php
update: add try catch to pdo query upgrade_database.php
update: class_config from cache file to site_config
update: file output format user_functions.php
update: get_birthday_users fetch to keep mysql packet size small User.php
fix: values should be an array of arrays function_autopost.php
update: set chat styles per template
update: set class colors per template
move: chat css classes into template folders
remove: unused columns from select User.php

29 Oct, 2018
fix: undefined var admin/upgrade_database.php