@@ -1,4 +1,5 @@
 04 Nov, 2018
+add: delete log files from log viewer
 fix: ajax timeout
 update: improve ajax render times
 update: ajax scripts for uniformity
